--- a/sale_project_analytic_tags/views/sale_order_form.xml
+++ b/sale_project_analytic_tags/views/sale_order_form.xml
@@ -1,23 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<openerp>
-    <data>
 
-        <record id="view_order_form" model="ir.ui.view">
-            <field name="name">Sale order line order id</field>
-            <field name="model">sale.order</field>
-            <field name="inherit_id" ref="sale.view_order_form" />
-            <field name="arch" type="xml">
-
-                <field name='order_line' position="before">
-                    <field name="project_id" invisible="1"/>
-                </field>
-
-                <field name='order_line' position="attributes">
-                    <attribute name="context">{'order_id': active_id, 'project_id': project_id}</attribute>
-                </field>
-
+<odoo>
+    <record id="view_order_form" model="ir.ui.view">
+        <field name="name">Sale order line order id</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form" />
+        <field name="arch" type="xml">
+            <field name='order_line' position="attributes">
+                <attribute name="context">{'order_id': active_id, 'analytic_account_id': analytic_account_id}</attribute>
             </field>
-        </record>
-
-    </data>
-</openerp>
+        </field>
+    </record>
+</odoo>
